--- a/P.Garrafa/package.json
+++ b/P.Garrafa/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.1.6",
     "vue-slick-carousel": "^1.0.6"
   },
