--- a/P.Garrafa/package.json
+++ b/P.Garrafa/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "flowbite": "^1.5.5",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-cookies": "^1.8.2",
+    "vue-picture-input": "^2.4.0",
     "vue-router": "^4.1.6",
     "vue-slick-carousel": "^1.0.6"
   },
